// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`db should be able to get a list 1`] = `
Array [
  Object {
    "id": "baz",
  },
  Object {
    "id": "foo",
  },
]
`;

exports[`db should be able to get a list after (starting) some value 1`] = `
Array [
  Object {
    "id": "eoo",
  },
  Object {
    "id": "foo",
  },
]
`;

exports[`db should be able to get a list after some value 1`] = `
Array [
  Object {
    "id": "foo",
  },
]
`;

exports[`db should be able to get a list before (starting) some value 1`] = `
Array [
  Object {
    "id": "baz",
  },
  Object {
    "id": "eoo",
  },
]
`;

exports[`db should be able to get a list before some value 1`] = `
Array [
  Object {
    "id": "baz",
  },
]
`;

exports[`db should be able to get a list with a limited count 1`] = `
Array [
  Object {
    "id": "baz",
  },
]
`;

exports[`db should be able to get a list with a specific query 1`] = `
Array [
  Object {
    "id": "bar",
  },
  Object {
    "id": "foo",
  },
]
`;

exports[`db should be able to get a reversed list 1`] = `
Array [
  Object {
    "id": "foo",
  },
  Object {
    "id": "baz",
  },
]
`;

exports[`db should be able to put & get a value 1`] = `
Object {
  "id": "bar",
  "value": Object {
    "title": "bar",
  },
}
`;

exports[`db should throw when value isn't there 1`] = `[NotFoundError: Key not found in database]`;
